tdf#153352 Use Promote/Demote in Tabbed UI instead of Increase/Decrease indent
As discussed in the ticket, the Tabbed UI of Impress/Draw uses the "Increase/Decrease indent" commands (.uno:DecrementIndent and .uno:IncrementIndent) which is confusing for the user.

When the user clicks this command, they want actually to Promote/Demote the list level, so instead we should use the commands .uno:OutlineLeft and .uno:OutlineRight here instead. This patch makes the Tabbed UI more coherent with the sidebar, which uses the correct commands.

Change-Id: I070b52e6fb31d348b1dd97c0ba28911f6e73590a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146705
Tested-by: Jenkins
Tested-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Rafael Lima <rafael.palma.lima@gmail.com>

--- a/sd/uiconfig/sdraw/ui/notebookbar.ui
+++ b/sd/uiconfig/sdraw/ui/notebookbar.ui
@@ -9005,11 +9005,11 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <object class="GtkToolButton" id="Home-IncrementIndent1">
+                                      <object class="GtkToolButton" id="Home-OutlineRight1">
                                         <property name="visible">True</property>
                                         <property name="halign">center</property>
                                         <property name="hexpand">True</property>
-                                        <property name="action_name">.uno:IncrementIndent</property>
+                                        <property name="action_name">.uno:OutlineRight</property>
                                       </object>
                                       <packing>
                                         <property name="expand">False</property>
@@ -9017,11 +9017,11 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <object class="GtkToolButton" id="Home-DecrementIndent1">
+                                      <object class="GtkToolButton" id="Home-OutlineLeft1">
                                         <property name="visible">True</property>
                                         <property name="halign">center</property>
                                         <property name="hexpand">True</property>
-                                        <property name="action_name">.uno:DecrementIndent</property>
+                                        <property name="action_name">.uno:OutlineLeft</property>
                                       </object>
                                       <packing>
                                         <property name="expand">False</property>
