--- a/sd/uiconfig/simpress/ui/notebookbar_compact.ui
+++ b/sd/uiconfig/simpress/ui/notebookbar_compact.ui
@@ -4033,9 +4033,9 @@
                             <property name="valign">center</property>
                             <property name="show_arrow">False</property>
                             <child>
-                              <object class="GtkToolButton" id="Home-IncrementIndent">
+                              <object class="GtkToolButton" id="Home-OutlineRight">
                                 <property name="visible">True</property>
-                                <property name="action_name">.uno:IncrementIndent</property>
+                                <property name="action_name">.uno:OutlineRight</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -4043,9 +4043,9 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkToolButton" id="Home-DecrementIndent">
+                              <object class="GtkToolButton" id="Home-OutlineLeft">
                                 <property name="visible">True</property>
-                                <property name="action_name">.uno:DecrementIndent</property>
+                                <property name="action_name">.uno:OutlineLeft</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -9620,9 +9620,9 @@
                             <property name="valign">center</property>
                             <property name="show_arrow">False</property>
                             <child>
-                              <object class="GtkToolButton" id="Table-IncrementIndent1">
+                              <object class="GtkToolButton" id="Table-OutlineRight1">
                                 <property name="visible">True</property>
-                                <property name="action_name">.uno:IncrementIndent</property>
+                                <property name="action_name">.uno:OutlineRight</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -9630,9 +9630,9 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkToolButton" id="Table-DecrementIndent1">
+                              <object class="GtkToolButton" id="Table-OutlineLeft1">
                                 <property name="visible">True</property>
-                                <property name="action_name">.uno:DecrementIndent</property>
+                                <property name="action_name">.uno:OutlineLeft</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
