--- a/sd/uiconfig/simpress/ui/notebookbar.ui
+++ b/sd/uiconfig/simpress/ui/notebookbar.ui
@@ -4214,11 +4214,11 @@
                                 <property name="toolbar_style">icons</property>
                                 <property name="show_arrow">False</property>
                                 <child>
-                                  <object class="GtkToolButton" id="Home-IncrementIndent">
+                                  <object class="GtkToolButton" id="Home-OutlineRight">
                                     <property name="visible">True</property>
                                     <property name="halign">center</property>
                                     <property name="hexpand">True</property>
-                                    <property name="action_name">.uno:IncrementIndent</property>
+                                    <property name="action_name">.uno:OutlineRight</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -4226,11 +4226,11 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkToolButton" id="Home-DecrementIndent">
+                                  <object class="GtkToolButton" id="Home-OutlineLeft">
                                     <property name="visible">True</property>
                                     <property name="halign">center</property>
                                     <property name="hexpand">True</property>
-                                    <property name="action_name">.uno:DecrementIndent</property>
+                                    <property name="action_name">.uno:OutlineLeft</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
