--- a/cui/uiconfig/ui/optviewpage.ui
+++ b/cui/uiconfig/ui/optviewpage.ui
@@ -500,7 +500,7 @@
                     <property name="hexpand">True</property>
                     <property name="active">0</property>
                     <items>
-                      <item translatable="yes" context="optviewpage|appearance">Automatic</item>
+                      <item translatable="yes" context="optviewpage|appearance">System</item>
                       <item translatable="yes" context="optviewpage|appearance">Light</item>
                       <item translatable="yes" context="optviewpage|appearance">Dark</item>
                     </items>
