Related tdf#129905 Add new .uno:SectionBoundaries to the Notebookbar
This patch adds the new command .uno:SectionBoundaries to the notebookbar interfaces.

Change-Id: Ib01b8221e3015c460f6b7cc0cdac3c7ddd4aab1a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146785
Tested-by: Jenkins
Tested-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>

--- a/sw/uiconfig/swriter/ui/notebookbar.ui
+++ b/sw/uiconfig/swriter/ui/notebookbar.ui
@@ -2196,6 +2196,13 @@
       </object>
     </child>
     <child>
+      <object class="GtkMenuItem" id="MenuView-SectionBoundaries">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="action_name">.uno:SectionBoundaries</property>
+      </object>
+    </child>
+    <child>
       <object class="GtkMenuItem" id="MenuView-ShowGraphics">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
