tdf#150045 A few more supplemental labels
Change-Id: Ifc0afe5c04145378b5fe32b12791c774d96f8a9c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146903
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>

--- a/cui/uiconfig/ui/javastartparametersdialog.ui
+++ b/cui/uiconfig/ui/javastartparametersdialog.ui
@@ -193,6 +193,9 @@
                     <property name="can-focus">False</property>
                     <property name="label" translatable="yes" context="javastartparametersdialog|label6">For example: -Dmyprop=c:\\program files\\java</property>
                     <property name="xalign">0</property>
+                    <attributes>
+                      <attribute name="scale" value="0.9"/>
+                    </attributes>
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
