--- a/cui/uiconfig/ui/optonlineupdatepage.ui
+++ b/cui/uiconfig/ui/optonlineupdatepage.ui
@@ -269,6 +269,9 @@
                             <property name="can_focus">False</property>
                             <property name="label" translatable="yes" context="optonlineupdatepage|destpathlabel">Download destination:</property>
                             <property name="xalign">0</property>
+                            <attributes>
+                              <attribute name="scale" value="0.9"/>
+                            </attributes>
                             <child internal-child="accessible">
                               <object class="AtkObject" id="destpathlabel-atkobject">
                                 <property name="AtkObject::accessible-description" translatable="yes" context="extended_tip|destpathlabel">Click to select the destination folder for downloaded files.</property>
@@ -287,6 +290,9 @@
                             <property name="can_focus">False</property>
                             <property name="ellipsize">end</property>
                             <property name="xalign">0</property>
+                            <attributes>
+                              <attribute name="scale" value="0.9"/>
+                            </attributes>
                           </object>
                           <packing>
                             <property name="expand">False</property>
