--- a/cui/uiconfig/ui/optviewpage.ui
+++ b/cui/uiconfig/ui/optviewpage.ui
@@ -654,6 +654,9 @@
                     <property name="margin-start">12</property>
                     <property name="label" translatable="yes" context="optviewpage|skiaenabled">Skia is currently enabled.</property>
                     <property name="xalign">0</property>
+                    <attributes>
+                      <attribute name="scale" value="0.9"/>
+                    </attributes>
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
@@ -666,6 +669,9 @@
                     <property name="margin-start">12</property>
                     <property name="label" translatable="yes" context="optviewpage|skiadisabled">Skia is currently disabled.</property>
                     <property name="xalign">0</property>
+                    <attributes>
+                      <attribute name="scale" value="0.9"/>
+                    </attributes>
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
