--- a/sfx2/uiconfig/ui/password.ui
+++ b/sfx2/uiconfig/ui/password.ui
@@ -318,6 +318,9 @@
                 <property name="can-focus">False</property>
                 <property name="margin-start">6</property>
                 <property name="xalign">0</property>
+                <attributes>
+                  <attribute name="scale" value="0.9"/>
+                </attributes>
                 <child internal-child="accessible">
                   <object class="AtkObject" id="minlenft-atkobject">
                     <property name="AtkObject::accessible-role" translatable="no">static</property>
