--- a/sw/uiconfig/swriter/ui/indexentry.ui
+++ b/sw/uiconfig/swriter/ui/indexentry.ui
@@ -259,7 +259,7 @@
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
                         <property name="margin-end">6</property>
-                        <property name="label" translatable="yes" context="indexentry|levelft">Level:</property>
+                        <property name="label" translatable="yes" context="indexentry|levelft">Index level:</property>
                         <property name="use-underline">True</property>
                         <property name="mnemonic-widget">levelnf</property>
                         <property name="xalign">0</property>
@@ -277,9 +277,10 @@
                         <property name="activates-default">True</property>
                         <property name="truncate-multiline">True</property>
                         <property name="adjustment">adjustment1</property>
+                        <property name="tooltip_text" translatable="yes" context="indexentry|levelnf">Enter the index level for the entry.</property>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="levelnf-atkobject">
-                            <property name="AtkObject::accessible-description" translatable="yes" context="indexentry|extended_tip|levelnf">Entries using the paragraph format "Heading X" (X = 1-10) can be automatically added to the table of contents. The level of the entry in the index corresponds to the outline level of the heading style.</property>
+                            <property name="AtkObject::accessible-description" translatable="yes" context="indexentry|extended_tip|levelnf">Entries using a “Heading X” paragraph style (X = [1–10]) can be automatically added to the Table of Contents. The level of the entry in the index corresponds to the outline level of the heading.</property>
                           </object>
                         </child>
                       </object>
