--- a/sw/uiconfig/swriter/ui/newuserindexdialog.ui
+++ b/sw/uiconfig/swriter/ui/newuserindexdialog.ui
@@ -95,7 +95,7 @@
                   <object class="GtkLabel" id="label2">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes" context="newuserindexdialog|label2">_Name</property>
+                    <property name="label" translatable="yes" context="newuserindexdialog|label2">_Name:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">entry</property>
                     <property name="xalign">0</property>
