move image into the .ui file
Change-Id: I5dad1bd0bcdbedf20d27109ca08109a1a2a6234b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147085
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>

--- a/vcl/uiconfig/ui/openlockedquerybox.ui
+++ b/vcl/uiconfig/ui/openlockedquerybox.ui
@@ -68,6 +68,7 @@
                 <property name="valign">start</property>
                 <property name="margin-start">24</property>
                 <property name="margin-top">70</property>
+                <property name="icon-name">vcl/res/help.png</property>
                 <child internal-child="accessible">
                   <object class="AtkObject" id="questionmark-atkobject">
                     <property name="AtkObject::accessible-name" translatable="yes" context="openlockedquerybox|questionmark">Question mark image</property>
