--- a/svx/uiconfig/ui/fontworkgallerydialog.ui
+++ b/svx/uiconfig/ui/fontworkgallerydialog.ui
@@ -117,6 +117,11 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="model">liststore1</property>
+                    <child internal-child="accessible">
+                      <object class="AtkObject" id="ctlFavoriteswin-atkobject">
+                        <property name="AtkObject::accessible-description" translatable="yes" context="fontworkgallerydialog|extented_tip|ctlFavoriteWin">Select a Fontwork style and click OK to insert the Fontwork into your document. Double-click or Ctrl (Command) + double-click the Fontwork in your document to enter text edit mode and change the text.</property>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
