--- a/sw/uiconfig/swriter/ui/fldrefpage.ui
+++ b/sw/uiconfig/swriter/ui/fldrefpage.ui
@@ -151,6 +151,7 @@
                         <property name="headers_clickable">False</property>
                         <property name="search_column">0</property>
                         <property name="show_expanders">False</property>
+                        <property name="tooltip_text" translatable="yes" context="fldrefpage|tooltip_text|format">Select format for selected reference field.</property>
                         <child internal-child="selection">
                           <object class="GtkTreeSelection" id="treeview-selection2"/>
                         </child>
@@ -308,7 +309,7 @@
                             </child>
                             <child internal-child="accessible">
                               <object class="AtkObject" id="selecttip-atkobject">
-                                <property name="AtkObject::accessible-description" translatable="yes" context="fldrefpage|extended_tip|selecttip">Lists the available fields for the field type selected in the Type list. To insert a field, click the field, select a format in the "Refer using" list, and then click Insert.</property>
+                                <property name="AtkObject::accessible-description" translatable="yes" context="fldrefpage|extended_tip|selecttip">Lists the available fields for the field type selected in the “Type” list. To insert a field, click the field, select a format in the “Refer using” list, and then click “Insert”.</property>
                               </object>
                             </child>
                           </object>
@@ -353,7 +354,7 @@
                             </child>
                             <child internal-child="accessible">
                               <object class="AtkObject" id="select-atkobject">
-                                <property name="AtkObject::accessible-description" translatable="yes" context="fldrefpage|extended_tip|select">Lists the available fields for the field type selected in the Type list. To insert a field, click the field, select a format in the "Insert reference to" list, and then click Insert.</property>
+                                <property name="AtkObject::accessible-description" translatable="yes" context="fldrefpage|extended_tip|select">Lists the available fields for the field type selected in the “Type” list. To insert a field, click the field, select a format in the “Refer using” list, and then click “Insert”.</property>
                               </object>
                             </child>
                           </object>
